--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.beust</groupId>
   <artifactId>jcommander</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <description>A Java framework to parse command line options with annotations.</description>
   <name>jcommander</name>
   <url>http://maven.apache.org</url>
@@ -20,8 +20,16 @@
     <connection>http://github.com/cbeust/jcommander</connection>
   </scm>
 
+  <developers>
+    <developer>
+      <name>Cedric Beust</name>
+    </developer>
+ </developers>
+
   <build>
     <plugins>
+
+      <!-- Bundle sources -->
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -37,6 +45,7 @@
         </executions>
       </plugin>
 
+      <!-- Compilation -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -46,6 +55,20 @@
         </configuration>
       </plugin>
 
+      <!-- Generating Javadoc -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <dependencySourceIncludes>
+            <dependencySourceInclude>com.beust.jcommander.JCommander</dependencySourceInclude>
+          </dependencySourceIncludes>
+        </configuration>
+      </plugin>
+
+
+      <!-- Signing with gpg -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
