--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.beust</groupId>
   <artifactId>jcommander</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <description>A Java framework to parse command line options with annotations.</description>
   <name>jcommander</name>
   <url>http://maven.apache.org</url>
@@ -17,7 +17,7 @@
   </licenses>
   <scm>
     <url>http://github.com/cbeust/jcommander</url>
-    <connection>http://github.com/cbeust/jcommander</connection>
+    <connection>scm:git:http://github.com/cbeust/jcommander.git</connection>
   </scm>
 
   <developers>
@@ -60,11 +60,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.7</version>
-        <configuration>
-          <dependencySourceIncludes>
-            <dependencySourceInclude>com.beust.jcommander.JCommander</dependencySourceInclude>
-          </dependencySourceIncludes>
-        </configuration>
       </plugin>
 
 
