--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
   <groupId>com.beust</groupId>
   <artifactId>jcommander</artifactId>
   <packaging>jar</packaging>
+  <name>JCommander</name>
   <version>1.1-SNAPSHOT</version>
   <description>A Java framework to parse command line options with annotations.</description>
-  <name>jcommander</name>
-  <url>http://maven.apache.org</url>
+  <url>http://beust.com/jcommander</url>
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
