--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.7</version>
+        <configuration>
+          <excludePackageNames>*.internal</excludePackageNames>
+        </configuration>
       </plugin>
 
       <!-- Signing with gpg -->
