--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,20 @@
         </configuration>
       </plugin>
 
+      <!-- Tests -->
+<!-- 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+-->
+ 
       <!-- Generating Javadoc -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -103,7 +117,12 @@
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
+<!-- 
       <version>5.12.1</version>
+      <version>5.11</version>
+      <classifier>jdk15</classifier>
+ -->
+       <version>5.13-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
