--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,9 @@
     </license>
   </licenses>
   <scm>
-    <url>http://github.com/cbeust/jcommander</url>
-    <connection>scm:git:http://github.com/cbeust/jcommander.git</connection>
+    <connection>scm:git:git@github.com:cbeust/jcommander.git</connection>
+    <developerConnection>scm:git:git@github.com:cbeust/jcommander.git</developerConnection>
+    <url>git@github.com:cbeust/jcommander.git</url>
   </scm>
 
   <developers>
@@ -122,7 +123,7 @@
       <version>5.11</version>
       <classifier>jdk15</classifier>
  -->
-       <version>5.13-SNAPSHOT</version>
+       <version>5.12.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
