--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <version>2.3.1</version>
         <configuration>
           <source>1.5</source>
+          <target>1.5</target>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
