Add OSGi headers in MANIFEST.MF, fix version policy

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <goals>
               <goal>manifest</goal>
             </goals>
+            <configuration>
+              <instructions>
+                <_versionpolicy>$(@)</_versionpolicy>
+              </instructions>
+            </configuration>
           </execution>
         </executions>
       </plugin>
