--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
           <dependency>
             <groupId>com.beust</groupId>
             <artifactId>jcommander</artifactId>
-            <version>1.13</version>
+            <version>1.31-SNAPSHOT</version>
 <!--
             <version>${project.version}</version>
 -->
