--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.10</version>
         <configuration>
-          <skipTests>false</skipTests>
+          <skipTests>true</skipTests>
         </configuration>
         <dependencies>
           <dependency>
