--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
     <version>3</version>
   </parent>
 
+  <properties>
+      <mockito.version>1.8.4</mockito.version>
+      <junit.version>4.11</junit.version>      
+  </properties>
+  
   <build>
     <plugins>
 
@@ -158,6 +163,18 @@
   </build>
 
   <dependencies>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>${mockito.version}</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>${junit.version}</version>
+        <scope>test</scope>
+    </dependency>  
   	<dependency>
   		<groupId>org.testng</groupId>
   		<artifactId>testng</artifactId>
