Restore test running from pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.10</version>
         <configuration>
-          <skipTests>true</skipTests>
+          <skipTests>false</skipTests>
         </configuration>
         <dependencies>
           <dependency>
@@ -202,7 +202,7 @@
   	<dependency>
   		<groupId>org.testng</groupId>
   		<artifactId>testng</artifactId>
-  		<version>6.1.1</version>
+  		<version>6.8.21</version>
   		<type>jar</type>
   		<scope>test</scope>
         <exclusions>
