--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ plugins {
 version = '1.52'
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply from: 'gradle/publishing.gradle'
 
 repositories {
