--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,26 @@
     <url>git@github.com:cbeust/jcommander.git</url>
   </scm>
 
+  <repositories>
+    <repository>
+      <id>jcenter</id>
+      <name>bintray</name>
+      <url>http://jcenter.bintray.com</url>
+    </repository>
+<!-- 
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <name>Nexus Staging Repository</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
+    <repository>
+      <id>oss-jfrog-artifactory</id>
+      <name>oss-jfrog-artifactory-snapshots</name>
+      <url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
+    </repository>
+-->
+  </repositories>
+
   <distributionManagement>
     <repository>
       <id>sonatype-nexus-staging</id>
@@ -202,7 +222,7 @@
   	<dependency>
   		<groupId>org.testng</groupId>
   		<artifactId>testng</artifactId>
-  		<version>6.8.21</version>
+  		<version>6.9.5</version>
   		<type>jar</type>
   		<scope>test</scope>
         <exclusions>
