Activate TestNG as testing framework for gradle

--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,8 @@ task sourceJar(type: Jar) {
 artifacts {
     sourceJar
 }
+
+test {
+    // enable TestNG support (default is JUnit)
+    useTestNG()
+}
