Fixed various stuff:
  - Problem due to encoding not being set. Tests were failing because we had UTF-8 and ISO-8859-1
    mismatch. **The UTF-8 was chosen**.
  - Gradle build version.
  - Fixed test that was expecting a file not to be found.

Signed-off-by: Gaël Lhez <glhez@users.noreply.github.com>

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
     id "com.jfrog.bintray" version "1.2"
 }
 
-version = '1.58'
+version = '1.72'
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
@@ -41,4 +41,8 @@ artifacts {
 test {
     // enable TestNG support (default is JUnit)
     useTestNG()
+}
+
+tasks.withType(JavaCompile) {
+  options.encoding = "UTF-8"
 }
