Updated build to support Java 10.

--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -43,7 +43,10 @@ publishing {
 task install(dependsOn: publishToMavenLocal)
 
 Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def file = project.rootProject.file('local.properties')
+if(file.exists()) {
+    properties.load(file.newDataInputStream())
+}
 
 bintray {
     user = properties.getProperty("bintray.user")
